add hand symbol while visiting column

--- a/styles.css
+++ b/styles.css
@@ -53,4 +53,5 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 .column:hover {
     color: red;
+    cursor: pointer; /* Change cursor to hand symbol */
 }
