--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,18 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     cursor: pointer; /* Change cursor to hand symbol */
 }
 
+footer:hover {
+    color: red;
+    cursor: pointer;
+}
+
+footer {
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+    background-color: #4C2447;
+    color: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
